# VarsconAssessment

./: .dockerignore  .gitignore  Dockerfile  README.md  config.py  docker-compose.yml  dto.py  factory.py  main.py  pyproject.toml  workflow.py
composio_cache/actions/: ACCULYNX_ADD_JOB_APPOINTMENT  ACCULYNX_CREATE_A_CONTACT  ACCULYNX_CREATE_A_JOB  ACCULYNX_CREATE_A_LEAD  ACCULYNX_JOB_APPOINTMENT_SUMMARY  ACCULYNX_LIST_OF_CALENDARS_FOR_THE_LOCATION  ACCULYNX_LIST_OF_CONTACT_TYPES_RELATED_TO_THE_COMPANY  ACCULYNX_UPDATE_COMPANY_REPRESENTATIVE  AFFINITY_GET_ALL_COMPANIES  AFFINITY_GET_ALL_LIST_ENTRIES_ON_A_LIST  AFFINITY_GET_ALL_LIST_ENTRIES_ON_A_SAVED_VIEW  AFFINITY_GET_ALL_OPPORTUNITIES  AFFINITY_GET_ALL_PERSONS  AFFINITY_GET_A_COMPANY_S_LISTS  AFFINITY_GET_A_COMPANY_S_LIST_ENTRIES  AFFINITY_GET_A_PERSON_S_LISTS  AFFINITY_GET_A_PERSON_S_LIST_ENTRIES  AFFINITY_GET_A_SINGLE_COMPANY  AFFINITY_GET_A_SINGLE_OPPORTUNITY  AFFINITY_GET_A_SINGLE_PERSON  AFFINITY_GET_CURRENT_USER  AFFINITY_GET_METADATA_ON_ALL_LISTS  AFFINITY_GET_METADATA_ON_A_SINGLE_LIST  AFFINITY_GET_METADATA_ON_A_SINGLE_LIST_S_FIELDS  AFFINITY_GET_METADATA_ON_A_SINGLE_SAVED_VIEW  AFFINITY_GET_METADATA_ON_COMPANY_FIELDS  AFFINITY_GET_METADATA_ON_PERSON_FIELDS  AFFINITY_GET_METADATA_ON_SAVED_VIEWS  AGENCYZOOM_AUTHENTICATE_FOR_JWTVIA_V4_SSO  AGENCYZOOM_BATCH_CREATE_CONTACT  AGENCYZOOM_BATCH_CREATE_LEAD  AGENCYZOOM_BATCH_DELETE_TASK  AGENCYZOOM_CHANGE_STATUS_FOR_LEAD  AGENCYZOOM_COMPLETE_TASK  AGENCYZOOM_CREATE_AN_OPPORTUNITY  AGENCYZOOM_CREATE_A_CUSTOMER_NOTE  AGENCYZOOM_CREATE_A_DRIVER_FOR_AN_OPPORTUNITY  (+9968 more)
(+1867 files in other folders)
